secondfile/objects/Apttus_Attr_Dropdowns__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IndicesOfDropdownsAddSite__c</fullName>
        <label>IndicesOfDropdownsAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndicesOfDropdownsUBB__c</fullName>
        <label>IndicesOfDropdownsUBB</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndicesOfDropdowns__c</fullName>
        <label>IndicesOfDropdowns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apttus_Attr_Dropdowns</label>
</CustomObject>